force-app/main/default/objects/Account/fields/Industry2__c.field-meta.xml
<CustomField>
    <fullName>Industry2__c</fullName>
    <description>second picklist as aligned with Aquafina&apos;s business needs</description>
    <inlineHelpText>Associated account&apos;s industry</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beverage Distribution</fullName>
            </value>
            <value>
                <fullName>Casual Dining</fullName>
            </value>
            <value>
                <fullName>Catering Services</fullName>
            </value>
            <value>
                <fullName>Cloud / Ghost Kitchens</fullName>
            </value>
            <value>
                <fullName>Cold Chain &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Fine Dining</fullName>
            </value>
            <value>
                <fullName>FMCG Distribution</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage Services</fullName>
            </value>
            <value>
                <fullName>Food Distribution</fullName>
            </value>
            <value>
                <fullName>Food Import &amp; Export</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Hospitality Supplies</fullName>
            </value>
            <value>
                <fullName>Quick Service Restaurants (QSR)</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>Restaurant Supply</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>