force-app/main/default/objects/Account/recordTypes/Aquafina_Person_Account.recordType-meta.xml
<RecordType>
    <fullName>Aquafina_Person_Account</fullName>
    <active>true</active>
    <label>Aquafina Person Account</label>
</RecordType>