force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
    <sharedTo>
        <role>Sales_Director</role>
    </sharedTo>
</ListView>