force-app/main/default/objects/Account/listViews/French_Accounts.listView-meta.xml
<ListView>
    <fullName>French_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS2_COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>FR</value>
    </filters>
    <label>French Accounts</label>
    <sharedTo>
        <role>Sales_Operations_Director_France</role>
    </sharedTo>
</ListView>