force-app/main/default/objects/Account/listViews/Spanish_Accounts.listView-meta.xml
<ListView>
    <fullName>Spanish_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>Active__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS2_COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>ES</value>
    </filters>
    <label>Spanish Accounts</label>
    <sharedTo>
        <role>Sales_Operations_Director_Spain</role>
    </sharedTo>
</ListView>